--- a/style.css
+++ b/style.css
@@ -1,40 +1,42 @@
 /* Basic Style */
-body {
+
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+
+.header__img {
   width: 100%;
 }
-.aaa .more_inf {
+
+.header__link {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-.aaa {
-  text-align: center;
-}
-}
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .task-row-wrapper {
   display: flex;
 }
+
 ul {
   margin:0;
   padding: 0px;
@@ -146,3 +148,9 @@ ul li.editMode input[type=text] {
 ul li.editMode label {
   display:none;
 }
+
+@media (max-width:768px) {
+  .header {
+    text-align: center;
+  }
+  }
