--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ ul {
 li, h3 {
   list-style:none;
 }
-input,button{
+input, button{
   outline:none;
 }
 button {
@@ -120,17 +120,17 @@ li > label {
 li >    input[type="text"] {
   width: 226px;
 }
-button.delete img {
+.button__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul.complete-list label {
   text-decoration: line-through;
   color: #888;
 }
@@ -140,12 +140,12 @@ ul li input[type=text] {
   display:none;
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
   display:inline-block;
   width:224px;
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
   display:none;
 }
 
