--- a/style.css
+++ b/style.css
@@ -27,27 +27,29 @@
   margin: 0 auto 0;
 }
 
-.task {
+.task__item, .input-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.task__wrapper {
   display: flex;
 }
 
-ul {
+.section__list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.list, .section__header {
   list-style:none;
 }
-input, button{
-  outline:none;
+
+.task__input {
+  outline: none;
 }
-button {
+
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -55,13 +57,15 @@ button {
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
+  outline:none;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+
+.section__header,
+.main__label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +74,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input-text[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +86,18 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input-text[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.main__label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
-  width: 318px;
-}
 
 /* Task list */
-li {
+.list {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -104,22 +105,25 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+/* li > * {
   vertical-align: middle;
-}
+} */
 
-li > input[type="checkbox"] {
+.input-checkbox[type="checkbox"] {
     margin: 0 10px;
 }
-li > label {
+
+.task__item {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+
+.input-text[type="text"] {
   width: 226px;
 }
+
 .button__img {
   height: 2em;
   transform: rotateZ(45deg);
@@ -130,22 +134,22 @@ li >    input[type="text"] {
 }
 
 /* Completed */
-ul.complete-list label {
+.complete-list .task__item{
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.section__list .input-text[type=text] {
   display:none;
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .input-text[type=text] {
   display:inline-block;
   width:224px;
 }
 
-ul li.edit-mode label {
+.edit-mode .task__item {
   display:none;
 }
 
