refactor: rename classes (BEM) according to rule 2.1 in html-and-css-extended.md

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   padding: 0px;
 }
 
-.list,
+.list__item,
 .section__header {
   list-style: none;
 }
@@ -104,7 +104,7 @@
 }
 
 /* Task list */
-.list {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
