fix: restor of working TODO (fix js code)

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@
 }
 
 /* Completed */
-.complete-list .task__item {
+.completed-list .task__item {
   text-decoration: line-through;
   color: #888;
 }
